Oct 02, 2020
 - source file change: MGI separates multiple values by '|', instead of ','

May 18, 2020
 - source file change, per RGDD-1776
   NEW FORMAT (genes_to_phenotype.txt)
     #Format: entrez-gene-id [tab] entrez-gene-symbol [tab] HPO-Term-ID [tab] HPO-Term-Name [tab] Frequency-Raw [tab] Frequency-HPO [tab] Additional Info from G-D source [tab] G-D source<tab>disease-ID for link
     2	A2M	HP:0001300	Parkinsonism			susceptibility	mim2gene	OMIM:104300

Mar 9, 2020
 - refactored annotations qc and load code, for better performance and accurate summary counts

Mar 4, 2020
 - source file change: different field order
   NEW FORMAT (phenotypes_to_gene.txt)
     #Format: HPO-id [tab] HPO label [tab] entrez-gene-id [tab] entrez-gene-symbol [tab] Additional Info from G-D source [tab] G-D source [tab] disease-ID for link
     HP:0000002	Abnormality of body height	3954	LETM1	-	mim2gene	OMIM:194190
   OLD FORMAT
     #Format: diseaseId [tab] gene-symbol [tab] gene-id [tab] HPO-ID [tab] HPO-term-name
     OMIM:302800	GJB1	2705	HP:0002015	Dysphagia

May 2, 2019 - v.1.6.6
 - tuned up summary emails
 - simplified logic for MGI pehnotype pipeline

Feb 15, 2019 - v.1.6.5
 - updated dependencies

Dec 19, 2018 - v.1.6.3
 - updated dependencies and build.gradle

May 21, 2018 - v.1.6.2
 - HPO annotator: removed calls to UMLS service, because server with UMLS data (RIVERA) is no longer available)
 - both annotators: improved logging

Feb 9, 2018 - v.1.6.1
 - HPO annotator: changed evidence code for annotations to IAGP (previously IEA) -- per RGDD-1455

Apr 19, 2017 - v.1.6.0
 - HPO annotator: updated to handle data from Orphanet, in addition to OMIM

Mar 13, 2017 - v.1.5.9
 - added protection: no more than 5% of stale annotations could be deleted

Feb 8, 2017 - v.1.5.8
 - upgraded build scripts from ANT to GRADLE

Oct 5, 2016 - v.1.5.7
 - mouse HP annotator: updated url for phenotype file from MGI -- per RGDD-1287

Sep 12, 2016 - v.1.5.6